refactor: Unify CPQ expression keying with `ComponentKey` and robustly initialize `varToNodeMap`.